# VigilAI

./: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_ENHANCEMENT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
mobile_app/: README.md
mobile_app/src/screens/: DashboardScreen.tsx
phase1_prototype/: README.md  __init__.py  config.json  main.py
phase1_prototype/core/: data_collector.py  detection_engine.py  intervention_system.py  metrics.py
phase1_prototype/hardware/: camera.py  obd_interface.py  wearables.py
phase1_prototype/utils/: config.py  logger.py
phase2_core/: README.md
phase2_core/inference/: real_time_inference.py
phase2_core/models/biometric/: stress_detector.py
phase2_core/models/fusion/: multimodal_fusion.py
phase2_core/models/predictive/: predictive_analytics.py
phase2_core/models/steering/: steering_analyzer.py
phase2_core/models/video/: fatigue_detector.py
phase3_scalability/: README.md
phase3_scalability/cloud_backend/api_gateway/: __init__.py  config.yaml  gateway.py
phase3_scalability/cloud_backend/microservices/device_service/: __init__.py  service.py
phase3_scalability/cloud_backend/microservices/user_service/: __init__.py  service.py
phase3_scalability/cloud_backend/streaming/kafka/: __init__.py  producer.py
phase3_scalability/edge_cloud/: __init__.py
phase3_scalability/edge_cloud/edge_gateway/: __init__.py  gateway.py
phase4_deployment/: README.md
phase4_deployment/analytics/dashboard/: __init__.py  app.py
phase4_deployment/docker/: docker-compose.yml
phase4_deployment/kubernetes/deployments/: api-gateway.yaml  user-service.yaml
phase4_deployment/monitoring/prometheus/: prometheus.yaml
shared/accessibility/: accessibility_features.py
shared/config/: database_init.sql
shared/monitoring/: system_health.py
shared/safety/: emergency_response.py
tests/: __init__.py  test_basic.py  test_phase1.py  test_phase2.py  test_phase2_basic.py  test_phase2_simple.py  test_phase3_cloud_backend.py  test_phase4_deployment.py  test_runner.py  test_system_integration.py
